# chess

./: .gitignore  CMakeLists.txt  README.md
include/headers/: Cell.h  Game.h
include/sources/: Cell.cpp  Game.cpp
src/headers/: Bishop.h  Figure.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
src/sources/: Bishop.cpp  Figure.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp  main.cpp
test/: TestCell.cpp  TestCell.h  TestGame.cpp  TestGame.h  testMain.cpp
